--- a/lab-02-logging/lab-02-logging-logback/pom.xml
+++ b/lab-02-logging/lab-02-logging-logback/pom.xml
@@ -8,31 +8,26 @@
         <version>2.3.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <groupId>com.example</groupId>
-    <artifactId>lab-01-inital</artifactId>
+    <artifactId>lab-02-logging-logback</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>lab-01-inital</name>
-    <description>lab-01-inital</description>
-
+    <name>lab-02-logging-logback</name>
+    <description>lab-02-logging-logback</description>
     <properties>
         <java.version>11</java.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
-    <repositories>
-
-        <repository>
-            <id>Central</id>
-            <url>https://repo1.maven.org/maven2</url>
-        </repository>
-    </repositories>
 
     <build>
         <plugins>
